--- a/src/app/features/supplier/supplier.component.html
+++ b/src/app/features/supplier/supplier.component.html
@@ -54,7 +54,7 @@
   >
     <ng-template #caption>
       <div class="flex items-center justify-between">
-        <h5 class="m-0">Clientes</h5>
+        <h5 class="m-0">{{componentTitle}}</h5>
         <p-iconfield>
           <p-inputicon styleClass="pi pi-search" />
           <input
