--- a/src/app/features/user/user.component.html
+++ b/src/app/features/user/user.component.html
@@ -51,7 +51,7 @@
   >
     <ng-template #caption>
       <div class="flex items-center justify-between">
-        <h5 class="m-0">{{componentTitle}}</h5>
+        <h5 class="m-0">{{ componentTitle }}</h5>
         <p-iconfield>
           <p-inputicon styleClass="pi pi-search" />
           <input
@@ -113,6 +113,7 @@
             [icon]="item.activo ? 'pi pi-check' : 'pi pi-times'"
             [rounded]="true"
             [text]="true"
+            size="small"
             [severity]="item.activo ? 'primary' : 'danger'"
           />
         </td>
@@ -163,99 +164,112 @@
         </div>
         <!-- username -->
         <div class="col-12 md:col-9 lg:col-3 field">
-            <label for="username" class="block">Username</label>
-            <input
-              pInputText
-              id="username"
-              formControlName="username"
-              class="w-full"
-              [ngClass]="
-                _helperService.getFormControlNgClass(
-                  frm,
-                  'username',
-                  'ng-invalid ng-dirty'
-                )
-              "
-            />
+          <label for="username" class="block">Username</label>
+          <input
+            pInputText
+            id="username"
+            formControlName="username"
+            class="w-full"
+            [ngClass]="
+              _helperService.getFormControlNgClass(
+                frm,
+                'username',
+                'ng-invalid ng-dirty'
+              )
+            "
+          />
 
-            @if (_helperService.getFormControlNgClass(frm, 'username') &&
-            frm.controls['username'].hasError('required')) {
-            <small class="text-red-500"> Username es requerido </small>
-            } 
-            @if (_helperService.getFormControlNgClass(frm, 'username') &&
-            frm.controls['username'].hasError('minlength')) {
-            <small class="text-red-500">
-              Username requiere mínimo de 6 caracteres
-            </small>
-            } @if (_helperService.getFormControlNgClass(frm, 'username') &&
-            frm.controls['username'].hasError('maxlength')) {
-            <small class="text-red-500">
-              Username requiere menos de 20 caracteres
-            </small>
-            } 
+          @if (_helperService.getFormControlNgClass(frm, 'username') &&
+          frm.controls['username'].hasError('required')) {
+          <small class="text-red-500"> Username es requerido </small>
+          } @if (_helperService.getFormControlNgClass(frm, 'username') &&
+          frm.controls['username'].hasError('minlength')) {
+          <small class="text-red-500">
+            Username requiere mínimo de 6 caracteres
+          </small>
+          } @if (_helperService.getFormControlNgClass(frm, 'username') &&
+          frm.controls['username'].hasError('maxlength')) {
+          <small class="text-red-500">
+            Username requiere menos de 20 caracteres
+          </small>
+          }
         </div>
 
         <!-- contraseña -->
         <div class="col-12 md:col-6 lg:col-3 field">
-            <label for="password" class="block">Contraseña</label>
-            <p-password              
-              id="password"
-              formControlName="password"                            
-              class="w-full"
-              styleClass="w-full"
-              inputStyleClass="w-full"
-              [ngClass]="
-                _helperService.getFormControlNgClass(
-                  frm,
-                  'password',
-                  'ng-invalid ng-dirty'
-                )
-              "
-               [toggleMask]="true"
-               [feedback]="false"
-            />
+          <label for="password" class="block">Contraseña</label>
+          <p-password
+            id="password"
+            formControlName="password"
+            class="w-full"
+            styleClass="w-full"
+            inputStyleClass="w-full"
+            [ngClass]="
+              _helperService.getFormControlNgClass(
+                frm,
+                'password',
+                'ng-invalid ng-dirty'
+              )
+            "
+            [toggleMask]="true"
+            [feedback]="false"
+          />
 
-            @if (_helperService.getFormControlNgClass(frm, 'password') &&
-            frm.controls['password'].hasError('required')) {
-            <small class="text-red-500 block"> Constraseña es requerida </small>
-            } 
-            @if (_helperService.getFormControlNgClass(frm, 'password') &&
-            frm.controls['password'].hasError('minlength')) {
-            <small class="text-red-500">
-              Contraseña requiere mínimo de 6 caracteres
-            </small>
-            } @if (_helperService.getFormControlNgClass(frm, 'password') &&
-            frm.controls['password'].hasError('maxlength')) {
-            <small class="text-red-500">
-              Contraseña requiere menos de 20 caracteres
-            </small>
-            } 
+          @if (_helperService.getFormControlNgClass(frm, 'password') &&
+          frm.controls['password'].hasError('required')) {
+          <small class="text-red-500 block"> Constraseña es requerida </small>
+          } @if (_helperService.getFormControlNgClass(frm, 'password') &&
+          frm.controls['password'].hasError('minlength')) {
+          <small class="text-red-500">
+            Contraseña requiere mínimo de 6 caracteres
+          </small>
+          } @if (_helperService.getFormControlNgClass(frm, 'password') &&
+          frm.controls['password'].hasError('maxlength')) {
+          <small class="text-red-500">
+            Contraseña requiere menos de 20 caracteres
+          </small>
+          }
         </div>
 
         <!-- avatar -->
-        <div class="col-12 md:col-6 lg:col-3 field">
-            <label for="avatar" class="block">Avatar</label>
-            <input
-              pInputText           
-              id="avatar"
-              formControlName="avatar"
-              class="w-full"
-              [ngClass]="
-                _helperService.getFormControlNgClass(
-                  frm,
-                  'avatar',
-                  'ng-invalid ng-dirty'
-                )
-              "
-            />
-            @if (_helperService.getFormControlNgClass(frm, 'avatar') &&
-            frm.controls['avatar'].hasError('required')) {
-            <small class="text-red-500"> Avatar es requerido </small>
-            }        
+        <div class="col-12 md:col-6 lg:col-2 field">
+          <label for="avatar" class="block">Avatar</label>
+          <p-fileupload
+            #foto
+            mode="basic"
+            chooseLabel="Seleccionar"
+            chooseIcon="pi pi-upload"
+            name="demo[]"
+            accept="image/*"
+            (onSelect)="onSelectImage($event)"
+            [auto]="true"
+            styleClass="align-items-start justify-start"
+            class="align-items-start justify-start"
+          />
+
+          @if (selectedFile) {
+          <small
+            class="text-gray-600 max-w-[200px] truncate cursor-pointer inline-block"
+            [pTooltip]="selectedFile.name"
+            tooltipPosition="top"
+          >
+            Archivo: {{ selectedFile.name }}
+          </small>
+          } @if (alertImageVisible) {
+          <small class="block text-red-500"> Avatar es requerido </small>
+          }
         </div>
 
+
+         @if (currentImageUrl) {
+
+           <div class="col-12 md:col-6 lg:col-1 mt-3">
+             <p-avatar [image]="currentImageUrl" size="large" shape="circle" />
+           </div>
+         }
+
         <!-- edad -->
-        <div class="col-12 md:col-2 lg:col-2 field">
+        <div class="col-12 md:col-6 lg:col-2 field">
           <label for="edad" class="block">Edad</label>
           <input
             pInputText
@@ -269,7 +283,7 @@
           frm.controls['edad'].hasError('required')) {
           <small class="text-red-500"> Edad es requerida </small>
           }
-        </div>        
+        </div>
 
         <!-- cedula -->
         <div class="col-12 md:col-10 lg:col-3 field">
@@ -291,8 +305,7 @@
           @if (_helperService.getFormControlNgClass(frm, 'cedula') &&
           frm.controls['cedula'].hasError('required')) {
           <small class="text-red-500"> La cédula es requerida </small>
-          } 
-          @if (_helperService.getFormControlNgClass(frm, 'cedula') &&
+          } @if (_helperService.getFormControlNgClass(frm, 'cedula') &&
           frm.controls['cedula'].hasError('minlength')) {
           <small class="text-red-500">
             La cédula requiere mínimo de 6 números
@@ -376,10 +389,11 @@
           @if (_helperService.getFormControlNgClass(frm, 'correo') &&
           frm.controls['correo'].hasError('required')) {
           <small class="text-red-500"> Correo es requerido </small>
-          }
-              @if (_helperService.getFormControlNgClass(frm, 'correo') &&
+          } @if (_helperService.getFormControlNgClass(frm, 'correo') &&
           frm.controls['correo'].hasError('email')) {
-          <small class="text-red-500">Estructura de correo incorrecta (email&#64;email.com) </small>
+          <small class="text-red-500"
+            >Estructura de correo incorrecta (email&#64;email.com)
+          </small>
           }
         </div>
 
@@ -395,8 +409,7 @@
           @if (_helperService.getFormControlNgClass(frm, 'telefono') &&
           frm.controls['telefono'].hasError('required')) {
           <small class="text-red-500"> Teléfono es requerido </small>
-          }
-         @if (_helperService.getFormControlNgClass(frm, 'telefono') &&
+          } @if (_helperService.getFormControlNgClass(frm, 'telefono') &&
           frm.controls['telefono'].hasError('minlength')) {
           <small class="text-red-500">
             Teléfono requiere mínimo de 6 números
@@ -404,9 +417,8 @@
           } @if (_helperService.getFormControlNgClass(frm, 'telefono') &&
           frm.controls['telefono'].hasError('maxlength')) {
           <small class="text-red-500">
-            Teléfono requiere menos de 10 números
-          </small>}
-           @if ( _helperService.getFormControlNgClass(frm, 'telefono') &&
+            Teléfono requiere menos de 10 números </small
+          >} @if ( _helperService.getFormControlNgClass(frm, 'telefono') &&
           frm.controls['telefono'].hasError('pattern')) {
           <small class="text-red-500"> Teléfono sólo permite números </small>
           }
@@ -426,7 +438,7 @@
             appendTo="body"
             [filter]="true"
             filterBy="name"
-            class="w-full"            
+            class="w-full"
           ></p-select>
 
           @if (_helperService.getFormControlNgClass(frm, 'id_pais') &&
@@ -461,7 +473,12 @@
         severity="danger"
         [disabled]="loadingButtonSave"
       />
-      <p-button label="Guadar" icon="pi pi-check" (click)="save()" [loading]="loadingButtonSave" />
+      <p-button
+        label="Guadar"
+        icon="pi pi-check"
+        (click)="save()"
+        [loading]="loadingButtonSave"
+      />
     </ng-template>
   </p-dialog>
 
