--- a/src/app/features/sales/sales.component.html
+++ b/src/app/features/sales/sales.component.html
@@ -1,1 +1,362 @@
-<p>sales works!</p>
+<div class="card">
+  <p-toast />
+
+  <!-- NUEVO HEADER -->
+
+  <p-toolbar styleClass="mb-2">
+    <ng-template #start>
+      <p-button
+        label="Nuevo"
+        icon="pi pi-plus"
+        class="mr-2"
+        (onClick)="openModalNew()"
+      />
+      <p-button
+        severity="danger"
+        label="Borrar"
+        icon="pi pi-trash"
+        outlined
+        (onClick)="deleteAllRegisters()"
+        [disabled]="!selectedRegister || !selectedRegister.length"
+      />
+    </ng-template>
+
+    <ng-template #end>
+      <p-button
+        label="Export"
+        icon="pi pi-upload"
+        severity="secondary"
+        (onClick)="exportDataCSV($event)"
+      />
+    </ng-template>
+  </p-toolbar>
+
+  <!-- FIN NUEVO HEADER -->
+
+  <!-- NUEVA TABLA -->
+
+  <p-table
+    #table_custom
+    [value]="dataForTable"
+    [rows]="10"
+    [columns]="columns"
+    [paginator]="true"
+    [globalFilterFields]="getFilterFields()"
+    [tableStyle]="{ 'min-width': '75rem' }"
+    [(selection)]="selectedRegister"
+    [rowHover]="true"
+    dataKey="id_cliente"
+    currentPageReportTemplate="Mostrando del {first} al {last} de {totalRecords} registros"
+    [showCurrentPageReport]="true"
+    [scrollable]="true"
+    scrollHeight="300px"
+    [rowsPerPageOptions]="[10, 25, 50]"
+  >
+    <ng-template #caption>
+      <div class="flex items-center justify-between">
+        <h5 class="m-0">{{ componentTitle }}</h5>
+        <p-iconfield>
+          <p-inputicon styleClass="pi pi-search" />
+          <input
+            pInputText
+            type="text"
+            (input)="
+              table_custom?.filterGlobal($any($event.target).value, 'contains')
+            "
+            placeholder="Buscar..."
+          />
+        </p-iconfield>
+      </div>
+    </ng-template>
+    <ng-template #header>
+      <tr>
+        <th style="width: 3rem">
+          <p-tableHeaderCheckbox />
+        </th>
+
+        <ng-container *ngFor="let col of columns">
+          <th
+            *ngIf="col.field != 'actions'"
+            [ngStyle]="{ 'min-width': col.minWidth }"
+            [ngClass]="col.class"
+            [pSortableColumn]="col.order ? col.field : undefined"
+          >
+            {{ col.header }}
+            <p-sortIcon
+              *ngIf="col.order"
+              class="float-right"
+              [field]="col.field"
+            ></p-sortIcon>
+          </th>
+
+          <th *ngIf="col.field == 'actions'" [ngClass]="col.class">
+            {{ col.header }}
+          </th>
+        </ng-container>
+      </tr>
+    </ng-template>
+    <ng-template #body let-item>
+      <tr>
+        <td style="width: 3rem">
+          <p-tableCheckbox [value]="item" />
+        </td>
+        <td>
+          {{ item.id_venta }}
+        </td>
+         <td class="text-center">{{ item.cliente.persona.cedula }}</td>
+        <td>
+          {{
+            (item.cliente.persona?.nombre ?? "") + " " + (item.cliente.persona?.apellido ?? "")
+              | uppercase
+          }}
+        </td>
+        <td class="text-center">{{ item.valor_total | currency}}</td>        
+    
+        <td class="text-center">
+          <!-- <p-button
+            icon="pi pi-pencil"
+            class="mr-2"
+            [rounded]="true"
+            [outlined]="true"
+            (click)="editRegister(item)"
+            size="small"
+          /> -->
+          
+        <p-button
+            icon="pi pi-eye"
+            class="mr-2"
+            [rounded]="true"
+            [outlined]="true"
+            (click)="openModalSee(item)"
+            size="small"
+          />
+          
+          <p-button
+            icon="pi pi-trash"
+            severity="danger"
+            [rounded]="true"
+            [outlined]="true"
+            (click)="deleteRegister(item)"
+            size="small"
+          />
+        </td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+      <tr>
+        <td [attr.colspan]="columns.length + 1">
+          <div class="pt-2 pb-2 text-center">No se encontraron registros.</div>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+  <!-- FIN NUEVA TABLA -->
+
+  <!-- MODAL  -->
+  <p-dialog
+    [(visible)]="createEditDialog"
+    [style]="{ width: '75vw' }"
+    [header]="titleDialog"
+    [modal]="true"
+    (onHide)="clearForm()"
+  >
+    <ng-template #content>
+      <!-- formulario -->
+      <form [formGroup]="frm" class="grid" autocomplete="off">
+        <!-- Cliente -->
+        <div class="col-12 md:col-6 lg:col-4 field">
+          <p-floatlabel variant="in">
+            <p-autocomplete
+              inputStyleClass="w-full"
+              styleClass="w-full"
+              formControlName="id_cliente"
+              [suggestions]="filteredListClients"
+              (completeMethod)="filterCustomers($event)"
+              appendTo="body"
+              showClear="true"
+              optionLabel="label"
+              optionValue="id"
+              emptyMessage="Sin resultados"
+            />
+            <label for="id_cliente">Cliente</label>
+          </p-floatlabel>
+          @if (_helperService.getFormControlNgClass(frm, 'id_cliente') &&
+          frm.controls['id_cliente'].hasError('required')) {
+          <small class="text-red-500 block"> Cliente es requerido </small>
+          }
+        </div>
+
+        <!-- Productos -->
+        <div class="col-12 md:col-6 lg:col-4 field">
+          <p-floatlabel variant="in">
+            <p-autocomplete
+              inputStyleClass="w-full"
+              styleClass="w-full"
+              formControlName="id_pxc"
+              [suggestions]="filteredListProducts"
+              (completeMethod)="filterProducts($event)"
+              [class.error-field]="
+                frm.controls['id_pxc'].invalid && frm.controls['id_pxc'].touched
+              "
+              appendTo="body"
+              showClear="true"
+              optionLabel="label"
+              optionValue="id"
+              emptyMessage="Sin resultados"
+            />
+            <label for="id_pxc">Producto</label>
+          </p-floatlabel>
+          @if (_helperService.getFormControlNgClass(frm, 'id_pxc') &&
+          frm.controls['id_pxc'].hasError('required')) {
+          <small class="text-red-500 block"> Producto es requerido </small>
+          }
+        </div>
+
+        <div class="col-12 md:col-6 lg:col-2 field">
+          <p-floatlabel variant="in">
+            <input
+              pInputText
+              id="cantidad"
+              formControlName="cantidad"
+              class="w-full"
+              [ngClass]="
+                _helperService.getFormControlNgClass(
+                  frm,
+                  'cantidad',
+                  'ng-invalid ng-dirty'
+                )
+              "
+            />
+            <label for="id_pxc">Cantidad</label>
+          </p-floatlabel>
+          @if (_helperService.getFormControlNgClass(frm, 'cantidad') &&
+          frm.controls['cantidad'].hasError('required')) {
+          <small class="text-red-500 block"> La cantidad es requerida </small>
+          } @if ( _helperService.getFormControlNgClass(frm, 'cantidad') &&
+          frm.controls['cantidad'].hasError('pattern')) {
+          <small class="text-red-500 block">
+            Cantidad sólo permite números
+          </small>
+          }
+        </div>
+
+        @if(!visualizationMode){     
+        <!-- Boton agregar -->
+        <div class="col-12 md:col-6 lg:col-1 field">
+          <p-button
+            icon="pi pi-plus"
+            styleClass="mt-3"
+            [rounded]="true"
+            [outlined]="true"
+            (click)="addRow()"
+            size="small"
+          />
+        </div>
+    }
+      </form>
+      <!-- Tabla Productos -->
+
+      <div class="card">
+        <p-table
+          [value]="articleSalesList"
+          dataKey="id"
+          [tableStyle]="{ 'min-width': '30rem' }"
+        >
+          <ng-template #header>
+            <tr>
+              <ng-container *ngFor="let col of columnsArticles">
+                <th
+                  *ngIf="col.field != 'actions'"
+                  [ngStyle]="{ 'min-width': col.minWidth }"
+                  [ngClass]="col.class"
+                  [pSortableColumn]="col.order ? col.field : undefined"
+                >
+                  {{ col.header }}
+                  <p-sortIcon
+                    *ngIf="col.order"
+                    class="float-right"
+                    [field]="col.field"
+                  ></p-sortIcon>
+                </th>
+
+                <th *ngIf="col.field == 'actions'" [ngClass]="col.class">
+                  {{ col.header }}
+                </th>
+              </ng-container>
+            </tr>
+          </ng-template>
+          <ng-template #body let-item let-editing="editing">
+            <tr>
+              <td>
+                {{ item.nombre_producto }}
+              </td>
+
+              @if(visualizationMode){ 
+                <td>{{ item.cantidad_vendida }}</td>
+               }
+              @else {
+                  <td
+                    [pEditableColumn]="item.cantidad_vendida"
+                    pEditableColumnField="cantidad_vendida"
+                  >
+                    <p-cellEditor>
+                      <ng-template #input>
+                        <input
+                          pInputText
+                          type="text"
+                          [(ngModel)]="item.cantidad_vendida"
+                          required
+                        />
+                      </ng-template>
+                      <ng-template #output>
+                        {{ item.cantidad_vendida }}
+                        <i class="pi pi-pencil text-primary text-xs ml-2"></i>
+                      </ng-template>
+                    </p-cellEditor>
+                  </td>
+              }
+              <td>
+                @if(!visualizationMode){     
+                <p-button
+                  icon="pi pi-eraser"
+                  severity="danger"
+                  styleClass="mt-3"
+                  [rounded]="true"
+                  [outlined]="true"
+                  (click)="deleteRow(item)"
+                  size="small"
+                />
+                }
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+      <!-- fin Tabla Productos -->
+    </ng-template>
+
+    <ng-template #footer>
+      <p-button
+        label="Cancelar"
+        icon="pi pi-times"
+        text
+        (click)="hideDialog()"
+        severity="danger"
+        [disabled]="loadingButtonSave"
+      />
+      <p-button
+        label="Guadar"
+        icon="pi pi-check"
+        (click)="save()"
+        [loading]="loadingButtonSave"
+      />
+    </ng-template>
+  </p-dialog>
+
+  <p-confirmDialog
+    [breakpoints]="{ '960px': '75vw', '640px': '100vw' }"
+    [style]="{ width: '30vw' }"
+    [baseZIndex]="10000"
+    rejectButtonStyleClass="p-button-danger"
+  />
+</div>
