Revert "Dashboard reportes de ventas"
This reverts commit 81ac4be988d98d61d49fff80777363c29bace811.

--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,40 +1,1 @@
-<div class="card" [formGroup]="frm">
-  <p-toolbar>
-    <ng-template #start>
-      <div class="flex gap-3 flex-wrap items-end">
-        <div class="flex flex-column">
-          <label class="mb-1">Desde</label>
-          <p-calendar formControlName="start" [showIcon]="true" dateFormat="yy-mm-dd"></p-calendar>
-        </div>
-        <div class="flex flex-column">
-          <label class="mb-1">Hasta</label>
-          <p-calendar formControlName="end" [showIcon]="true" dateFormat="yy-mm-dd"></p-calendar>
-        </div>
-        <div class="flex flex-column">
-          <label class="mb-1">Agrupar por</label>
-          <p-select formControlName="groupBy" [options]="groupByOptions" optionLabel="label" optionValue="value" styleClass="w-12rem"></p-select>
-        </div>
-        <div class="flex flex-column">
-          <label class="mb-1">Periodo</label>
-          <p-select formControlName="period" [options]="periodOptions" optionLabel="label" optionValue="value" styleClass="w-10rem"></p-select>
-        </div>
-        <div class="flex">
-          <button pButton label="Actualizar" icon="pi pi-refresh" (click)="loadReport()" [loading]="loading"></button>
-        </div>
-      </div>
-    </ng-template>
-  </p-toolbar>
-
-  <div class="grid mt-3">
-    <div class="col-12 md:col-5">
-      <p-panel header="Participación por {{ frm.controls['groupBy'].value }}">
-        <p-chart type="pie" [data]="pieData" [options]="pieOptions" style="min-height: 340px"></p-chart>
-      </p-panel>
-    </div>
-    <div class="col-12 md:col-7">
-      <p-panel header="Evolución por {{ frm.controls['period'].value }}">
-        <p-chart type="bar" [data]="barData" [options]="barOptions" style="min-height: 340px"></p-chart>
-      </p-panel>
-    </div>
-  </div>
-</div>
+<p>dashboard works!</p>
